# xvoice2

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  config.py  config_local.py  formatter.py  main.py  mic_stream.py  pyproject.toml  requirements.txt  run_system_test.sh  setup.py  test_transcribe.py  text_injector.py  transcriber.py  troubleshooting.md  whisper-api-notes.md
.github/workflows/: build-appimage.yml
docs/: index.html
packaging/: AppRun  README.md  build_appimage.sh  xvoice2.desktop  xvoice2.spec
tests/: README_system_test.md  conftest.py  system_test.py
tests/debug/: test_missing_model.py
tests/integration/: test_end_to_end.py
tests/unit/: test_formatter.py  test_mic_stream.py  test_ollama_integration.py  test_text_injector.py  test_transcriber.py  test_whisper_api.py
xvoice2/: __init__.py  __main__.py  config.py  config_local.py  config_local.py.example  formatter.py  gui.py  logging_util.py  main.py  mic_stream.py  model_download.py  notifier.py  parakeet_backend.py  settings_store.py  test_transcribe.py  text_injector.py  transcriber.py  wake_word.py
xvoice2/tests/: README.md  __init__.py  conftest.py  test_import.py
xvoice2/tests/debug/: test_missing_model.py
xvoice2/tests/integration/: test_end_to_end.py
xvoice2/tests/unit/: test_formatter.py  test_gui_observer.py  test_hallucination_filter.py  test_injection_spacing.py  test_mic_stream.py  test_model_download.py  test_notifier.py  test_ollama_integration.py  test_parakeet_backend.py  test_settings_store.py  test_text_injector.py  test_transcriber.py  (+2 more)
