[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Run the package's unit/integration suite by default. The standalone
# tests/system_test.py is a manual harness (run via run_system_test.sh, needs
# psutil) and matches pytest's *_test.py glob, so it's excluded here.
testpaths = ["xvoice2/tests"]